--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "sass": "^1.62.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
