--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "devStart": "nodemon script.js"
   },
   "dependencies": {
     "@next/font": "13.2.4",
+    "@prisma/client": "^4.13.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
+    "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -22,5 +25,6 @@
   },
   "devDependencies": {
     "prisma": "^4.13.0"
-  }
+  },
+  "type": "module"
 }
