--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "devStart": "nodemon script.js"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@next/font": "13.2.4",
     "@prisma/client": "^4.13.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
