--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^2.5.0",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
-    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +25,9 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
-    "prisma": "^4.14.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2"
   }
 }
