--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,14 @@
          "@components/*":["components/*"],
          "@styles/*":["styles/*"],
          "@lib/*" : ["lib/*"],
+         "@types/*" : ["types/*"],
       }
+   },
+
+   // Provides intelisense for testing with jest
+   "typeAcquisition": {
+      "include": [
+         "jest"
+      ]
    }
 }
