--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "prisma generate && next start",
     "lint": "next lint",
     "devStart": "nodemon script.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest --watchAll --verbose"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
+    "@types/node": "^20.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -25,7 +27,10 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
     "postcss": "^8.4.23",
     "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2"
