--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.0",
-    "@types/node": "^20.2.1",
+    "@prisma/client": "^4.14.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "nodemon": "^2.0.22",
+    "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/node": "^20.2.1",
     "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
     "jest": "^29.5.0",
     "postcss": "^8.4.23",
-    "prisma": "^4.14.0",
     "tailwindcss": "^3.3.2"
   }
 }
