--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
+    "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
+    "next-superjson-plugin": "^0.5.8",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.1",
     "react": "18.2.0",
