--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^5.0.0",
     "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
@@ -21,12 +21,12 @@
     "next-auth": "^4.22.1",
     "next-superjson-plugin": "^0.5.8",
     "nodemon": "^2.0.22",
-    "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "sass": "^1.62.1",
+    "superjson": "^1.12.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "autoprefixer": "^10.4.14",
     "jest": "^29.5.0",
     "postcss": "^8.4.23",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
