--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "pages/_app.tsx", "components/NavBar.tsx" ],
+    "**/*.tsx", "pages/_app.tsx", "app/components/NavBar/NavBar.tsx" ],
   "exclude": [
     "node_modules"
   ],
